# Wave-Function-Collapse

./: Cargo.toml  README.md
assets/: tiledata.json
src/: bucket_queue.rs  grid.rs  lib.rs  main.rs  visualization.rs  wfc.rs
src/grid/: coord.rs  map.rs  tile.rs  tile_data.rs
src/wfc/: history.rs  wfc_state.rs
