[package]
name = "wfc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bevy = { version = "0.17.3", features = ["x11"] }
fmt = "0.1.0"
json = "0.12.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"



[lib]
name = "wfc"  
path = "src/lib.rs"
